<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="67dp"
        android:text="@string/bass"
        android:onClick="playBeatSound" />

    <Button
        android:id="@+id/beat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:layout_alignLeft="@+id/crash"
        android:layout_below="@+id/crash"
        android:layout_marginTop="27dp"
        android:text="@string/beat" 
        android:onClick="playBeatSound" />

    <Button
        android:id="@+id/xylophone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="18dp"
        android:paddingLeft="18dp"
        android:layout_alignBaseline="@+id/beat"
        android:layout_alignBottom="@+id/beat"
        android:layout_alignLeft="@+id/trumpet"
        android:text="@string/xylophone"
        android:onClick="playBeatSound"  />

    <Button
        android:id="@+id/trumpet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_above="@+id/beat"
        android:layout_alignLeft="@+id/claps"
        android:text="@string/trumpet"
        android:onClick="playBeatSound" />

    <Button
        android:id="@+id/claps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/bass"
        android:layout_marginRight="24dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/claps"
        android:onClick="playBeatSound" />

    <Button
        android:id="@+id/crash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bass"
        android:layout_below="@+id/bass"
        android:layout_marginTop="21dp"
        android:paddingLeft="35dp"
        android:paddingRight="30dp"
        android:text="@string/crash"
        android:onClick="playBeatSound" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/playBeat"
        android:onClick="playBeat" />

</RelativeLayout>
